  * Rewritten SCM subsystem.  CVS and Subversion plugins have been cleaned
    up, and new plugins added: scmcpold (as a proof of concept), scmarch,
    scmbzr, scmdarcs, scmgit and scmhg.  Mercurial (scmhg) and Arch are
    not quite complete yet.
  * Patched mediawiki plugin to enable one wiki per project.

  [ Christian Bayle ]
  * Remove frame from mediawiki 

 -- Christian Bayle <bayle@debian.org>  Fri, 30 Oct 2009 22:31:45 +0100

gforge (4.8.51-1) experimental; urgency=low

  * Fixed blackhole syntax for gforge-mta-exim4 so as not to require
    file_transport.
  * New extratabs plugin from Adullact.
  * New globalsearch plugin allowing to publish lists of projects for
    other forges and to search for projects in remote forges.
  * New projectlabels plugin from Adullact.
  * Packaging-related files are now stored in
    gforge/packaging/{dirs,install,cron.d,control}/* rather than the
    previous gforge/{dirs,install,cron.d,control}/*.
  * Read sys_urlprefix from gforge.conf and use it for local.inc and in
    the Apache config.  This makes it possible to run FusionForge as
    http://<hostname>/forge/ with unmodified packages.

 -- Roland Mas <lolando@debian.org>  Wed, 29 Apr 2009 15:21:31 +0200

gforge (4.8.1-3+) UNRELEASED; urgency=low

  * Fix copyright file to mention nusoap.
  * Fix location of Vcs-Bzr: sources repository.
  * Fix problem in use-snoopy-from-distro.dpatch containing .rej changes.
  * No longer ship copy of nusoap in binary package, adding dependency on
    libnusoap-php instead (Closes: #529575).
  * Add provides tag to control for fusionforge.
  * Change default system name to FusionForge instead of GForge.

 -- Olivier Berger <olivier.berger@it-sudparis.eu>  Sat, 14 Nov 2009 11:18:43 +0100

gforge (4.8.1-3) unstable; urgency=low

  * New upstream snapshot from the 4.8 branch.  This includes fixes for
    CVE-2009-3303.
  * Fixed potential hang in install-postfix.sh.