@@ -4,7 +4,7 @@ Priority: optional
 Maintainer: Roland Mas <lolando@debian.org>
 Uploaders: Christian Bayle <bayle@debian.org>
 Build-Depends-Indep: sharutils, docbook-to-man, devscripts
-Build-Depends: debhelper (>= 5), dpatch, perl, gettext
+Build-Depends: debhelper (>= 7), dpatch, perl, gettext
 Standards-Version: 3.8.3
 Homepage: http://fusionforge.org/
 Vcs-Bzr: http://scm.fusionforge.org/bzr/fusionforge/svn-trunk-ro/
